--- a/src/components/ProductCard/ProductCard.css
+++ b/src/components/ProductCard/ProductCard.css
@@ -49,3 +49,7 @@
 .product-secondary-btn{
     padding: 5px 15px 5px 15px;
 }
+.product-category-tittle{
+    margin: 0;
+    padding-left: 10px;
+}
